--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=app
 
+api.url=${API_URL:https://fakestoreapi.com/products}
+
 # DATOS DE CONEXIÓN
 spring.datasource.url=jdbc:mysql://localhost:3306/shop?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
