--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,14 @@ spring.application.name=app
 
 api.url=${API_URL:https://fakestoreapi.com/products}
 
-# DATOS DE CONEXIÓN
-spring.datasource.url=jdbc:mysql://localhost:3306/shop?useSSL=false&serverTimezone=UTC
+# DATABASE CONFIGURATION
+spring.datasource.url=jdbc:mysql://localhost:3306/shoppingcart?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# CONFIGURACIÓN DE JPA / HIBERNATE
-spring.jpa.hibernate.ddl-auto=update
+# JPA / HIBERNATE CONFIGURATION
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
